# Oxalate

./: .env  .env.dev  .gitignore  .sops.yaml  Cargo.toml  README.md  flake.nix  result  sops_secrets.yaml
.direnv/: flake-profile-2-link
.sqlx/: query-2f8e51d3d91f02fba5b5b2aa479f9d8fdaaa4ab61e850408aebcbed10401eb49.json  query-45eb86d9edaf14dff35131787871d81abb689d05357ca953b7ad87387298047d.json  query-7bee0bbeb83368ad61c40c9cb55222d0ee1959d5efae1b350388100ef5bd56b7.json  query-7c5f2ab420d5890946335cb47a56f6f163f42a6c726e6c9b6da88ed7c936f823.json  query-88c3853d1ef96dde5a37aff8a631bc031a04ad39f597208fff42776103b4857a.json  query-8bf1b0968bc549599bfad27121cb2b56008386120f8e8e5cf18521c389005b0b.json  query-9dc8dcca6d0cee7c858106e55a96090874972233b8f96482d6a9a833cabbd1d6.json  query-b2b8e42d694d720d67dacc7f1119d011ec5853784206d498489ed3e227606443.json  query-b923ae2f2acc6249221993dd904eb125205da3ea78bf2b1504f331c9ff611b6e.json  query-cb7803f0aa4dc65a19ef3018e98d39d8a732db1bc1b98696bb625b19fb00a67a.json  query-e174dc55638a96de469d95fa10ad6461c2d7455b1ffe1cfae78ec8ec9322ce47.json  query-fd1cc245989b49ab49ad992753b8d1751c2e52d441364bd63a61ad811c8b1a7c.json
deploy/: .env.example  Servo.toml  docker-compose.yaml  flake.nix
docs/: .~lock.Presentation.pptx#  146.docx
migrations/: 00000000000000_extentions.sql  00000000000001_devices.sql  20251106211316_keylog.sql  20251106211316_keylogs.sql  20251107083404_uptime.sql  20251111082202_webpages.sql  20251113120910_logs.sql  20251114110320_proxy_resourse_usage.sql  20251117173957_urls.sql  20251202082251_minecraft_servers.sql  20260301153209_add_label_to_webpages.sql  20260311073847_meta_webpages.sql
nixModules/: +buildRustBin.nix  (+3 more)
src/bins/harvester/: .env.dev  Cargo.toml  build.rs  docker-compose.yaml  package.json
src/bins/harvester/.sqlx/: query-200f4d5e3b8e8e7c562b3766a5e50b0c10e4bc81bff28d53a15a17907a1fb49f.json  query-bfff0505ddec2ce7c9612acb0bb52d42edb7c120962221d09314bf2fbda9a676.json  query-ffa09b011376e84d47fd15ff9f12d7386c1b6fc997b85794cb974cb6adb95b64.json
src/bins/harvester/db/: db  snap.00000000000000C8
src/bins/harvester/db/blobs/: 200  216  232
src/bins/harvester/src/: create_postgres_pool.rs  error.rs  global_scan.rs  handle_proxy_outputs.rs  insure_device_exists.rs  kafka_logging_writer.rs  kv_db.rs  load_scraper_controller.rs  main.rs  proxy_connection_store.rs  proxy_settings_store.rs  save_scraper_controller.rs  scrapper_state.rs  setup_logger.rs
src/bins/harvester/src/env/: env_vars.rs  load_env_vars.rs  mod.rs
src/bins/harvester/src/middleware/: logging_ctx_generate_middleware.rs  logging_middleware.rs  mod.rs  proxy_id_middleware.rs
src/bins/harvester/src/private_endpoints/: api_docs.rs  get_ping.rs  mod.rs
src/bins/harvester/src/private_endpoints/control/: get_scraper_state.rs  mod.rs  post_swap_scraper_on_state.rs
src/bins/harvester/src/private_endpoints/metric/: get_active_tasks.rs  get_connected_proxies.rs  mod.rs
src/bins/harvester/src/proccesses/: mod.rs  ping.rs
src/bins/harvester/src/public_endpoints/: api_docs.rs  mod.rs
src/bins/harvester/src/public_endpoints/info/: get_uptime.rs  mod.rs  post_logs.rs  post_resources.rs  ws_uptime.rs
src/bins/harvester/src/public_endpoints/keylogger/: mod.rs  post_keylogger.rs
src/bins/harvester/src/public_endpoints/proxy/: mod.rs  post_proxy.rs  ws_proxy.rs
src/bins/indexer/: .env.dev  Cargo.toml
src/bins/indexer/src/: create_kafka_producer.rs  create_postgres_pool.rs  env.rs  main.rs
src/bins/indexer/src/endpoints/: api_docs.rs  app_docs.rs  get_ping.rs  mod.rs  post_keyword_graph.rs  post_search.rs
src/bins/indexer/src/scraping/: brave.rs  duckduckgo.rs  google.rs  mod.rs  mojeek.rs  search_text.rs
src/bins/indexer/src/scraping/text_search_engines/: bing.rs  brave.rs  google.rs  mod.rs  oxalate.rs  text_search_engine_result.rs
src/bins/outlet/: Cargo.toml  build.rs
src/bins/outlet/.sqlx/: query-1bca65125d0fcb8c5c7f7e9c8637030edcb0d95aa3651fa933dc1923332e8355.json  query-4c02f5e67bc397767d1eeae73b9d0ef9b4f5da2fbe915e845c39e2b08a87d9c7.json  query-be5d38162189c839ceef5b950d44b7afafedc10ca679dfb9aacde211443bdc0b.json
src/bins/outlet/src/: http_logger.rs  init_proxy.rs  keylogger.rs  main.rs  proxy.rs  resources.rs  uptime_pinger.rs  ws_connection.rs
src/bins/parser/: Cargo.toml
src/bins/parser/src/: main.rs
src/bins/parser/src/endpoints/: api_docs.rs  mod.rs  post_insert_meta_webpage.rs  post_insert_webpage.rs
src/bins/union/: Cargo.toml
src/bins/union/src/: main.rs  migrate_postgres_to_neo4j.rs  union_db.rs
src/bins/union/src/endpoints/: api_docs.rs  mod.rs  post_insert_keywords.rs  post_search_graph.rs
src/libs/init/: Cargo.toml
src/libs/init/src/: lib.rs
src/libs/middleware/: Cargo.toml
src/libs/middleware/src/: lib.rs  logging_middleware.rs
src/libs/schemas/: Cargo.toml
src/libs/schemas/src/: lib.rs
src/libs/schemas/src/harvester/private/: mod.rs
src/libs/schemas/src/harvester/private/control/: get_scraper_state.rs  mod.rs
src/libs/schemas/src/harvester/private/metric/: get_active_tasks.rs  get_connected_proxies.rs  mod.rs
src/libs/schemas/src/harvester/public/: mod.rs
src/libs/schemas/src/harvester/public/info/: mod.rs  post_logs.rs  post_resources.rs
src/libs/schemas/src/harvester/public/keylogger/: mod.rs  post_keylogger.rs
src/libs/schemas/src/harvester/public/proxy/: mod.rs  post_proxy.rs
src/libs/schemas/src/indexer/: mod.rs  post_keyword_graph.rs  post_search.rs
src/libs/schemas/src/parser/: mod.rs  post_insert_meta_webpage.rs  post_insert_webpage.rs
src/libs/schemas/src/union/: mod.rs  post_insert_keywords.rs  post_search_graph.rs
src/libs/scraper_controller/: Cargo.toml
src/libs/scraper_controller/src/: file_iterator_task_generator.rs  ipv4_iterator_task_generator.rs  lib.rs  proxy_id.rs  save_keywords_in_neo4j.rs  save_proxy_outputs.rs  scraper_controller.rs
src/libs/scrapper_controller/: Cargo.toml
src/libs/scrapper_controller/src/: error.rs  file_iterator_job_generator.rs  global_scan.rs  lib.rs  proxy_id.rs  save_proxy_outputs.rs  scrapper_controller.rs
(+71 files in other folders)
