[workspace]
members = [
    "src/bins/harvester",
    "src/bins/outlet",
    "src/libs/keylogger",
    "src/libs/kv_db",
    "src/libs/schemas",
    "src/libs/scraper_controller",
]


[workspace.dependencies]
oxalate_keylogger = { path = "src/libs/keylogger" }
oxalate_scraper_controller = { path = "src/libs/scraper_controller" }
oxalate_schemas = { path = "src/libs/schemas" }
oxalate_kv_db = { path = "src/libs/kv_db" }

tokio = { version = "1.48", features = ["full"] }
tonic-reflection = "0.14"
prost = "0.14"
tonic-types = "0.14"
prost-types = "0.14"
tonic-prost = "0.14.0"
envconfig = "0.11.0"
lazy_static = "1.5"
dotenv = "0.15"

# serializing
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

# docs
utoipa = { version = "5.4.0", features = ["chrono", "uuid", "url"] }

# types
dashmap = { version = "6.1.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
url = { version = "2.5.7", features = ["serde"] }
http = { version="1.4.0" }

# logging
log = { version = "0.4.28" }
structured-logger = { version = "1.0.5" }
# env_logger = { version = "0.11.8" }
 
# Error
thiserror = { version = "2.0.17" }
exn = { version = "0.2.1" }

# Macros
async-trait = { version = "0.1.89" }

# Storage
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }
