[package]
name = "oxalate_harvester"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
lazy_static = { workspace = true }
envconfig = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
axum = { version = "0.8.6", features = ["ws", "macros"] }
sled = "0.34"
thiserror = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
prost.workspace = true
serde_json = "1.0.145"
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
url = { version = "2.5.7", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
