[package]
name = "oxalate_harvester"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
lazy_static = { workspace = true }
envconfig = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
axum = { version = "0.8.6", features = ["ws", "macros"] }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
prost.workspace = true
serde_json = "1.0.145"
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
url = { version = "2.5.7", features = ["serde"] }

tokio-util = { version = "0.7.17", features = ["rt"] }
futures = { workspace = true }
futures-util = { workspace = true }

oxalate_schemas = { workspace = true }
oxalate_scraper_controller = { workspace = true }
oxalate_kv_db = { workspace = true }

dashmap = { workspace = true }
tower-http = { version = "0.6.7", features = ["trace"] }
exn = { workspace = true }
rdkafka = "0.39.0"
fern = { workspace = true }

log_json_serializer = { workspace = true }
enum_dispatch = { workspace = true }
parking_lot = { workspace = true }
