[package]
name = "oxalate_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
exn = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
rdkafka = { workspace = true }
http_error = { workspace = true }
oxalate_schemas = { workspace = true }
url = { workspace = true }
fern = { workspace = true }
log_json_serializer = { workspace = true }
kafka_writer_rs = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"] }
oxalate_env = { workspace = true }
neo4rs = { workspace = true }
oxalate_utils = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
scraper = { workspace = true }
async-trait = { workspace = true }
rand = { version = "0.10.0" }
base64 = { version = "0.22.1" }
envconfig = { workspace = true }
oxalate_init = { workspace = true }
