[package]
name = "oxalate_schemas"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa = { version = "5.4.0", features = ["chrono", "uuid", "url"] }
chrono = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

oxalate_scrapper_controller = { workspace = true }
oxalate_urls = { workspace = true }
