[package]
name = "oxalate_scraper_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
http = { workspace = true }
tokio-scoped = { workspace = true }

# oxalate_kv_db = { workspace = true }
exn = { workspace = true }
async-trait = { workspace = true }

flate2 = "1.1.5"
scraper = "0.25.0"
enum_dispatch = { workspace = true }
